--- a/styles.css
+++ b/styles.css
@@ -14,11 +14,11 @@ body {
   display: block;
   width: 50%;
   margin: auto;
-
+  
 }
 
 .btn {
-  margin: 25px;
+  margin: 20px;
   display: inline-block;
   height: 200px;
   width: 200px;
@@ -73,4 +73,26 @@ body {
   margin-top: 0.7em;
   font-size: 1.3em;
   text-decoration: underline;
+}
+@media (max-width: 510px) {
+  #level-title {
+    font-size: 1.3em;
+  }
+  .btn {
+    margin: 15px 5px;
+    width: 75px;
+    height: 75px;
+  }
+  .container {
+    width: 80%;
+    margin-left: 25%;
+  }
+  .rules {
+    width: 35%;
+    font-size: 0.6em;
+    top: 10em;
+  }
+  ol {
+    padding-left: 15%;
+  }
 }
